# corn

./: AGENTS.md  Cargo.toml  ChangeLog.md  Dockerfile  LICENSE  License.md  Makefile  README-tw.md  README.md  ROADMAP.md  STATE.md  docker-compose.yml  download_all_package-cron.sh  util_corn-cli_all-in-one-compile.sh  util_corn-cli_compile.sh  util_corn-loop-exec.sh  util_corn.sh  util_corn_all-in-one-compile.sh  util_corn_compile.sh
conf/: CornUsePermission.json
corn/: Cargo.toml
corn/datahub-task/jobs/corn/corn/plugins/test-plugin/: manifest.json
corn/sql/: 001_corn_plugin.sql
corn/ui/assets/: adminlte.min.css
corn/ui/templates/: dashboard.html  markdown.html
cron-cli/: Cargo.toml
cron-cli/src/: main.rs
data/mockdb/: cronBatchJobsTable_seed.csv  cronDefTable_seed.csv
k8s/: deployment.yaml  service.yaml
src/: main.rs
src/api/: proxy_routes.rs
src/config/: mod.rs
src/controller/: markdown_controller.rs  proxy_controller.rs
src/core/: api.rs  cli.rs  config.rs  lib.rs  main.rs  mode.rs  plugin.rs  proxy.rs  scheduler.rs  supervisor.rs  tacos.rs  ui.rs
src/cron/: mod.rs
src/db/: mod.rs  schema.rs
src/executor/: mod.rs  shell.rs  sql.rs
src/logging/: mod.rs
src/model/: plugin_execution_log.rs  plugin_registry.rs  plugin_version.rs  proxy_backend.rs  proxy_route.rs  supervisor_state.rs
src/models/: mod.rs
src/pages/: markdown.rs  proxy_backends.rs
src/plugin/: engine.rs  manifest.rs
src/proxy/: mod.rs
src/proxy/common/: mod.rs
src/proxy/execute/: mod.rs
src/proxy/parser/: mod.rs
src/service/: auth.rs  markdown_service.rs  mod.rs  proxy_service.rs  routes.rs
src/supervisor/: compat_supervisorctl.rs  mod.rs
src/supervisor/common/: mod.rs
src/supervisor/execute/: mod.rs
src/supervisor/parser/: mod.rs
src/ui/: mod.rs
src/view/: template_engine.rs
ui/cronbe/layouts/: main.html
ui/cronbe/pages/: batch_jobs_form.html  batch_jobs_list.html  dashboard.html  jobs.html  markdown.html
