[package]
name = "cron-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true

[[test]]
name = "test_f14_cron_cli"
path = "../test/test_f14_cron_cli.rs"
